	
    o 	The functions arrangeWindows() and getWindowsHandles() have
    	been added to give more programmatic control to the appearance
    	of windows in an R session.
    	
    o	A Windows menu has been added to the SDI version of the R GUI,
	and the corresponding menu in the MDI version has been
	expanded slightly.

    o	The libpng library has been updated to version 1.2.40.


PACKAGE INSTALLATION

    o	Rcmd SHLIB (which is used by Rcmd INSTALL) now calls 'make'
	without a target, rather than target 'all'.  This is now the
	same as on Unix, and was announced in the NEWS for 2.9.0.

    o	Help in base and recommended packages is no longer zipped: text,
	HTML, latex and examples files are now built when needed.

	Options --use-zip and --use-zip-help in R CMD INSTALL are no
	longer available and --auto-zip only zips data (or not).

	Help in packages installed under 2.9.x may not work correctly,
	and a warning is given when such a package is attached by
	library().  Re-installation of all packages is advised
	(use update.packages(checkBuilt = TRUE)).

	Binary packages are installed without CHM help if they contain
	it (as those intended for 2.9.x may).

    o	It is possible to install source packages without Rtools
	provided they have no compiled code and no configure.win or
	cleanup.win script.


INSTALLATION

    o	Support for memory profiling is enabled in a standard build
	(this can be changed by editing config.h).

    o	CHM help is no longer supported.

    o	The help default for the standard installer is HTML help rather
	than CHM help.

    o	The categories in the installers have been simplified.  Now the
	files to support installation of source packages are always
	installed (they are now only 0.7Mb), and there are no longer
	categories 'chtml', 'html/help', 'latex' and 'Rd'.




	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************

