@@ -7066,6 +7066,18 @@ R CMD @var{command} --help
 to obtain usage information for each of the tools accessible via the
 @code{R CMD} interface.
 
+In addition, you can use
+
+@example
+R CMD @var{cmd}
+@end example
+
+@noindent
+for any executable @command{@var{cmd}} on the path: this is useful to
+have the same environment as @R{} or the specific commands run under,
+for example to run @command{ldd} or @command{pdflatex}.
+
+
 @node Invoking R under Windows, Invoking R under Mac OS X, Invoking R from the command line, Invoking R
 @appendixsec Invoking R under Windows
 
@@ -7121,19 +7133,21 @@ Enable the ``Break to debugger'' menu item in @code{Rgui}, and trigger
 a break to the debugger during command line processing.
 @end table
 
-In Windows with @code{R CMD} you may also specify your own @file{*.bat}
-or @file{*.exe} file instead of one of the built-in commands.  It will
-be run with several environment variables set appropriately, including
-@env{R_HOME}, @env{R_VERSION}, @env{R_CMD}, @env{R_OSTYPE}, @env{PATH},
-@env{PERL5LIB}, and @env{TEXINPUTS}.  For example, if you already have
-@file{latex.exe} on your path, then
+In Windows with @code{R CMD} you may also specify your own @file{*.bat},
+@file{*.exe}, @file{.sh} or @file{.pl} file.  It will be run under the
+appropriate interpreter (Perl for @file{.pl}) with several environment
+variables set appropriately, including @env{R_HOME}, @env{R_VERSION},
+@env{R_CMD}, @env{R_OSTYPE}, @env{PATH}, @env{PERL5LIB}, and
+@env{TEXINPUTS}.  For example, if you already have @file{latex.exe} on
+your path, then
 
 @example
 R CMD latex.exe mydoc
 @end example
 @noindent
 will run @LaTeX{} on @file{mydoc.tex}, with the path to @R{}'s
-@file{share/texmf} macros appended to @env{TEXINPUTS}.
+@file{share/texmf} macros appended to @env{TEXINPUTS}.  (Unfortunately,
+this does not help with the MiKTeX build of @LaTeX{}.)
 
 @node Invoking R under Mac OS X, Scripting with R, Invoking R under Windows, Invoking R
 @appendixsec Invoking R under Mac OS X
